--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,25 +1,55 @@
 <%- include('partials/header'); -%>
 
-<form>
-    <h2>Sign up</h2>
-    <label for ="email">Email</label>
-    <input type="text" name = "email" required/>
-    <div class="email error"></div>
-    <label for ="password">Password</label>
-    <input type="password" name = "password" required/>
-    <div class="password error"></div>
-    <button>Signup</button>
-</form>
+    <form>
+        <h2>Sign up</h2>
+        <label for="email">Email</label>
+        <input type="text" name="email" required />
+        <div class="email error"></div>
+        <label for="password">Password</label>
+        <input type="password" name="password" required />
+        <div class="password error"></div>
+        <button>Signup</button>
+    </form>
 
-<script>
-    const form = document.querySelector('form')
-    form.addEventListener('submit', (e)=>{
-        e.preventDefault();
-        //get values
-        const email = form.email.value;
-        const password = form.password.value;
-        console.log(email,password)
-    })
-</script>
+    <script>
+        const form = document.querySelector('form')
+        const emailError = document.querySelector('.email.error')
+        const passwordError = document.querySelector('.password.error')
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
 
-<%- include('partials/footer'); -%> 
+            //reset errors
+            emailError.innerHTML = ""
+            passwordError.innerHTML = ""
+
+            //get values
+            const email = form.email.value;
+            const password = form.password.value;
+            console.log(email, password)
+
+            try {
+                const res = await fetch('/signup', {
+                    method: 'POST',
+                    body: JSON.stringify({ email, password }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+                const data = await res.json()
+                console.log(data)
+                if (data.errors) {
+                    emailError.innerHTML = data.errors.email
+                    passwordError.innerHTML = data.errors.password
+                }
+                
+                if(data.user){
+                    res.redirect('/')
+                }
+
+            } catch (error) {
+                console.log(error)
+            }
+        })
+    </script>
+
+    <%- include('partials/footer'); -%>
