--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -43,7 +43,7 @@
                 }
                 
                 if(data.user){
-                    res.redirect('/')
+                    location.assign('/')
                 }
 
             } catch (error) {
