--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,4 +11,8 @@
     <body>
         <nav>
             <h1><a class="head" href="/">Smoothies</a></h1>
+            <ul>
+                <li><a href="/login">Log in</a></li>
+                <li><a href="/signup" class="btn">Sign up</a></li>
+            </ul>
         </nav>
